# TorrentSeedr

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
app/: __init__.py  __main__.py  config.py  exceptions.py  logging_config.py
app/bot/: client.py  decorators.py
app/bot/handlers/: messages.py
app/bot/handlers/callbacks/: account.py  account_management.py  active_downloads.py  delete.py  device_auth.py  email_auth.py  link.py  navigation.py  playlist.py
app/bot/handlers/commands/: accounts.py  active.py  add_torrent.py  files.py  info.py  login.py  signup.py  start.py
app/bot/handlers/messages/: add_torrent.py  text_message.py
app/bot/utils/: commands.py  conversation.py
app/bot/views/: __init__.py  accounts_view.py  active_downloads_view.py  add_torrent_view.py  files_view.py  info_view.py  link_view.py  login_view.py  navigation_view.py  playlist_view.py  shared_view.py  signup_view.py  start_view.py  status_view.py
app/database/: __init__.py  repository.py  session.py
app/database/models/: __init__.py  account.py  base.py  bot_config.py  user.py
app/localization/i18n/: en.yml
app/services/: seedr.py
app/utils/: __init__.py  encryption.py  formatters.py  language.py  playlist.py  validators.py
