[project]
name = "seedrcc-bot"
version = "2.0.0"
description = "A Telegram bot to manage Seedr.cc account"
readme = "README.md"
requires-python = ">=3.14"
authors = [{ name = "Hemanta Pokharel" }]
license = { text = "MIT" }
keywords = ["telegram", "bot", "seedrcc"]


dependencies = [
  "cryptg>=0.5.2",
  "cryptography>=46.0.3",
  "pydantic>=2.12.5",
  "pydantic-settings>=2.12.0",
  "python-dotenv>=1.2.1",
  "pyyaml>=6.0.3",
  "seedrcc>=2.0.1",
  "sqlalchemy>=2.0.44",
  "structlog>=25.5.0",
  "telethon>=1.42.0",
  "xspf-lib>=0.3.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[project.optional-dependencies]
sqlite = ["aiosqlite>=0.21.0", "greenlet>=3.2.4"]
postgresql = ["asyncpg>=0.31.0"]
mysql = ["aiomysql>=0.3.2"]

[dependency-groups]
dev = [
  "aiosqlite>=0.21.0",
  "greenlet>=3.2.4",
  "mypy>=1.19.0",
  "ruff>=0.14.7",
  "ty>=0.0.1a29",
]

[tool.ruff]
line-length = 120
target-version = "py314"

[tool.ruff.lint]
select = ["I", "E", "W", "F", "S", "T201", "N", "UP"]
ignore = ["E501"]
